@@ -49,6 +49,7 @@ o enable gcc warnings, including -Werror
 o use list_for_each_entry() instead of list_for_each()
 o use const when possible
 o remove prefetch in slist.h since it confuses gcc
+o fix illegal use of return in the yacc code, use break instead
 
 version 0.9.5 (2007/07/29)
 ------------------------------
